src/dts/tests/modules/modules.exp
Error: modules.js:6
  6: var m : string = z;
                      ^ number. This type is incompatible with
  6: var m : string = z;
             ^^^^^^ string

Error: modules.js:7
  7: var obj = new I();
                   ^ constructor return. Property not found in
     v--------------------
  9: declare interface I {
 10:   x: typeof G_M.x;
 11:   get_y(c: G_M.C): typeof G_M.x;
 12: }
     ^ I. See lib: declarations/modules.js:9


Found 2 errors
